@@ -284,7 +284,7 @@ public class Deployer
    *                                      been configured for this deployer
    */
   public Deployer(String serviceName, StatusCache deviceStateCache,
-                  ControllerConfiguration controllerConfig, BeehiveCommandCheckService beehiveCommandCheckService,
+                  ControllerConfiguration controllerConfig,
                   Map<String, ModelBuilder> builders) throws InitializationException
   {
     if (deviceStateCache == null || controllerConfig == null)
@@ -292,7 +292,6 @@ public class Deployer
       throw new IllegalArgumentException("Null parameters are not allowed.");
     }
     
-    this.beehiveCommandCheckService = beehiveCommandCheckService;
     this.deviceStateCache = deviceStateCache;
     this.controllerConfig = controllerConfig;
     this.builders = createTypeSafeBuilderMap(builders);
